# voice-ai-experiments

./: .gitignore  .pre-commit-config.yaml  README.md
whisper-diarization/: README.md  audio_utils.py  main.py  model_downloader.py  pipeline.py  preprocess.py  pyproject.toml
whisper-diarization/docs/: asr-evaluation-guide.md  how-to-run.md  speaker-ordering-best-practices.md  whisper-diarization-architecture.md
whisper-diarization/evaluation/: cleanup_transcript.py  convert_text_transcript_to_json.py  convert_transcript_to_json.py  test_asr_evaluation.py
whisper-diarization/schema/: __init__.py  base.py  cli.py  config.py  diarization_models.py  outputs.py  schemas.py
whisper-diarization/utils/: __init__.py  audio_utils.py  diarize_helper.py  file_io.py  logging.py  token_helper.py
whisper-large-v3-et-subs/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
