[project]
name = "whisper-large-v3-et-subs"
version = "0.1.0"
description = "Test Whisper Large V3 model for Estonian text generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "torch==2.8.0",
   "transformers[sentencepiece,torch]==4.56.1",
   "typer==0.17.4",
   "loguru==0.7.3",
   "datasets",
   "accelerate==1.10.1",
   "hf-transfer==0.1.9",
   "orjson==3.11.3",
]
